refactor: simplify use of collections and remove comments